SPRING WEB FLOW CHANGELOG
=========================
http://www.springframework.org

Changes in version RC1
------------------------------------
* Relocated several support classes in webflow to webflow.support
* Introduced StatefulActionProxy, for delegating to flow-scoped actions that can hold local state.

Changes in version PR5 (28.7.2005)
------------------------------------
* Renamed the static helpers in the ServletEvent class to match with their instance counterparts: e.g. getHttpServletRequest()
  was renamed to getRequest().
* Renamed the addSubFlowState(...) methods in AbstractFlowBuilder to addSubflowState(...) to be consistent with the class name.
* Reorganized packages to remove all cyclic dependencies. Most of the changes were in packages not typically used by end users
  of the system. As a result the impact on existing applications should be limited. Changes to look out for are:
  FlowConversionService is now in package org.springframework.webflow.convert, ExpiredFlowCleanupFilter is now in package
  org.springframework.webflow.execution.servlet and FlowExecutionListenerAdapter moved to the package
  org.springframework.webflow.execution.
* Fixed JDK 1.3 compatability issues.
* Fixed several bugs reported in JIRA.
* Several improvements in FlowAction (the SWF-Struts integration).
* Fixed Struts 1.1 compatability issues.
* Minor changes in the SWF DTD: the "property" element is now always the first sub element of its containing parent element.
* Added several unit tests, e.g. for FormAction.
* Drastically improved FormAction. This also involved some minor refactorings in the FormObjectAccessor.
* Improved AttributeMapperAction.
* Improved JavaDoc.
* Miscellaneous code cleanup, especially in spring-binding.

Changes in version PR4 (17.7.2005)
------------------------------------
* Top level package rename from org.springframework.web.flow to org.springframework.webflow.
* Changes to make this SWF compatible with Spring 1.2.2 and later.